codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__summary__summary_cumulative_narrow.snap
---
source: tui/src/analytics/summary_tests.rs
expression: "screen(&mut view, 64, 60)"
---
"  Analytics  ·  Live account                                    "
"                                                                "
"  [Summary]  Total usage history  Messages  Plugins called      "
"  Skills used  Top chats                                        "
"                                                                "
"  ▎ Summary                                                     "
"  ────────────────────────────────────────────────────────────  "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                          Example User                          "
"                         @example.user                          "
"                              Plus                              "
"                                                                "
"         142.3B                7B                44h 7m         "
"    Lifetime tokens       Peak tokens         Longest chat      "
"                                                                "
"             158 days                      160 days             "
"          Current streak                Longest streak          "
"                                                                "
"  Token activity                   Daily  Weekly  [Cumulative]  "
"  Last 12 months                                                "
"                                                                "
"      Mar       Apr     May       Jun     Jul     Aug           "
"  max                                                       █   "
"                                                            █   "
"                                                            █   "
"                                                            █   "
"                                                            █   "
"                                                            █   "
"    0                                                       █   "
"                                                                "
"     Running total · top 300                                    "
"                                                                "
"  Activity insights                                             "
"                                                                "
"  Fast Mode                                                37%  "
"  Most used reasoning                               high · 26%  "
"  Skills explored                                          147  "
"  Total skills used                                     13,190  "
"  Total chats                                           21,482  "
"                                                                "
"  Most used plugins and skills                                  "
"                                                                "
"  $review                                           1,142 runs  "
"  @GitHub                                           1,059 runs  "
"                                                                "
"  Statistics as of Sep 9, 2026                                  "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"                                                                "
"  tab/1–6 section · z dashboard · ↑/↓ scroll                    "
"  g view · R refresh · pgup/pgdn scroll · esc back · q close    "
