codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__summary__summary_daily_wide.snap
---
source: tui/src/analytics/summary_tests.rs
expression: "screen(&mut view, 140, 44)"
---
"  Analytics  ·  Live account                                                                                                                "
"                                                                                                                                            "
"                                                                                                                                            "
"  [1 Summary]  2 Total usage history  3 Messages  4 Plugins called  5 Skills used  6 Top chats                                              "
"                                                                                                                                            "
"  ▎ Summary                                                                                                                                 "
"  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────  "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                Example User                                                                "
"                                                               @example.user                                                                "
"                                                                    Plus                                                                    "
"                                                                                                                                            "
"                       142.3B                  7B                  44h 7m               158 days              160 days                      "
"                  Lifetime tokens         Peak tokens           Longest chat         Current streak        Longest streak                   "
"                                                                                                                                            "
"               Token activity                                                                                           Daily               "
"               Last 12 months                                                                                                               "
"                                                                                                                                            "
"                         Oct     Nov       Dec     Jan     Feb     Mar       Apr     May       Jun     Jul     Aug                          "
"                Su □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □                  "
"                Mo □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □                  "
"                Tu □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ ■                  "
"                We □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ ■                  "
"                Th □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □                    "
"                Fr □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □                    "
"                Sa □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □ □                    "
"                                                                                                                                            "
"                  Less □ ■ ■ ■ ■ More                                                                                                       "
"                                                                                                                                            "
"               Activity insights                                        Most used plugins and skills                                        "
"                                                                                                                                            "
"               Fast Mode                                         37%    $review                                    1,142 runs               "
"               Most used reasoning                        high · 26%    @GitHub                                    1,059 runs               "
"               Skills explored                                   147                                                                        "
"               Total skills used                              13,190                                                                        "
"               Total chats                                    21,482                                                                        "
"                                                                                                                                            "
"               Statistics as of Sep 9, 2026                                                                                                 "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"  tab/1–6 section · z dashboard                                                                                                             "
"  g view · R refresh · esc back · q close                                                                                                   "
