codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__summary__summary_overview.snap
---
source: tui/src/analytics/summary_tests.rs
expression: "screen(&mut view, 144, 64)"
---
"  Analytics  ·  Live account                                                                                                                    "
"                                                                                                                                                "
"  ╭─ ▸ 1 Summary ────────────────────────────────────────────────────╮    ╭─   2 Total usage history ────────────────────────────────────────╮  "
"  │                                                                  │    │                                                                  │  "
"  │                           Example User                           │    │ 7d                                                               │  "
"  │                          @example.user                           │    │ By feature                                                       │  "
"  │                               Plus                               │    │ Total usage · relative units                                     │  "
"  │                                                                  │    │                                                                  │  "
"  │ Lifetime tokens                                           142.3B │    │    1                                                             │  "
"  │ Peak tokens                                                   7B │    │         —       —        —       —        —       —        —     │  "
"  │ Longest chat                                              44h 7m │    │    0 ─────────────────────────────────────────────────────────── │  "
"  │ Current streak                                          158 days │    │                                                            ▲     │  "
"  │ Longest streak                                          160 days │    │       Sep 3   Sep 4    Sep 5   Sep 6    Sep 7   Sep 8    Sep 9   │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │ Sep 9 · Not reported                                             │  "
"  │                                                                  │    │ ● Tasks                                                —         │  "
"  │                                                                  │    │ ● Code review                                          —         │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────╯    ╰──────────────────────────────────────────────────────────────────╯  "
"                                                                                                                                                "
"  ╭─   3 Messages ───────────────────────────────────────────────────╮    ╭─   4 Plugins called ─────────────────────────────────────────────╮  "
"  │                                                                  │    │                                                                  │  "
"  │ 7d                                                               │    │ 7d                                                               │  "
"  │ By model                                                         │    │ 186 calls                                                        │  "
"  │ 574 reported messages                                            │    │                                                                  │  "
"  │                                                                  │    │  2                                                               │  "
"  │  2                                                               │    │       —        —        —       —        —        —        —     │  "
"  │       —        —        —       —        —        —        —     │    │  0 ───────────────────────────────────────────────────────────── │  "
"  │  0 ───────────────────────────────────────────────────────────── │    │                                                            ▲     │  "
"  │                                                            ▲     │    │     Sep 3    Sep 4    Sep 5   Sep 6    Sep 7    Sep 8    Sep 9   │  "
"  │     Sep 3    Sep 4    Sep 5   Sep 6    Sep 7    Sep 8    Sep 9   │    │                                                                  │  "
"  │                                                                  │    │ Data not reported for Sep 9.                                     │  "
"  │ Data not reported for Sep 9.                                     │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────╯    ╰──────────────────────────────────────────────────────────────────╯  "
"                                                                                                                                                "
"  ╭─   5 Skills used ────────────────────────────────────────────────╮    ╭─   6 Top chats ──────────────────────────────────────────────────╮  "
"  │                                                                  │    │                                                                  │  "
"  │ 7d                                                               │    │ No history has been reported.                                    │  "
"  │ 54 uses                                                          │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │  2                                                               │    │                                                                  │  "
"  │       —        —        —       —        —        —        —     │    │                                                                  │  "
"  │  0 ───────────────────────────────────────────────────────────── │    │                                                                  │  "
"  │                                                            ▲     │    │                                                                  │  "
"  │     Sep 3    Sep 4    Sep 5   Sep 6    Sep 7    Sep 8    Sep 9   │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │ Data not reported for Sep 9.                                     │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  │                                                                  │    │                                                                  │  "
"  ╰──────────────────────────────────────────────────────────────────╯    ╰──────────────────────────────────────────────────────────────────╯  "
"                                                                                                                                                "
"  tab/1–6 section · enter/z maximize                                                                                                            "
"  g view · R refresh · pgup/pgdn scroll · esc back · q close                                                                                    "
