codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__tests__summary__summary_partial.snap
---
source: tui/src/analytics/summary_tests.rs
expression: rendered
---
" Usage · Business                                                                                   "
"  1 Overview   2 Credits   3 Tokens   4 Plugins   5 Skills                                          "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
" g Daily                                                                                            "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                              Business                                              "
"                                                                                                    "
"          0                  —                  —                  —                  —             "
"   Lifetime tokens      Peak tokens       Longest chat      Current streak     Longest streak       "
"                                                                                                    "
" Token activity                                                                                     "
" Last 12 months                                                                                     "
"                                                                                                    "
" Token activity history unavailable                                                                 "
"                                                                                                    "
" Activity insights                                  Most used plugins and skills                    "
"                                                                                                    "
" Fast Mode                                    0%    No reported plugins or skills.                  "
" Most used reasoning                           —                                                    "
" Skills explored                               —                                                    "
" Total skills used                             —                                                    "
" Total chats                                   0                                                    "
"                                                                                                    "
" Some profile statistics are unavailable.                                                           "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" esc back                                                                                           "
" tab/1–5 report · z dashboard · ? help · R refresh                                                  "
